Fix sticky menu precedence in z-index with the fat menu

--- a/frontend/packages/volto-light-theme/src/theme/sticky-menu.scss
+++ b/frontend/packages/volto-light-theme/src/theme/sticky-menu.scss
@@ -1,6 +1,6 @@
 .sticky-menu {
   position: fixed;
-  z-index: 1000;
+  z-index: 11;
   top: 50vh;
   right: 0;
   transform: translateY(-50%);
